app routes change

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -7,27 +7,7 @@
     <title>Mis Tramites</title>
 </head>
 <body>
-    <app-login></app-login>
-    <!--
-    <app-header></app-header>
+   <router-outlet></router-outlet>
 
-    <div class="container">
-        
-        <app-lateral></app-lateral>
-    
-        <div class="contenedor">
-            
-            <app-barra-opc></app-barra-opc>
-            -->
-            <!--  <app-crear-tramite></app-crear-tramite>  -->
-            <!--  <app-tabla-tramite></app-tabla-tramite>  -->
-            <!--<router-outlet></router-outlet>-->
-            <!--
-            <app-arrastrar></app-arrastrar>
-
-        </div>
-    </div>
-    -->
-   
 </body>
 </html>
