--- a/Frontend/src/app/arrastrar/arrastrar.component.css
+++ b/Frontend/src/app/arrastrar/arrastrar.component.css
@@ -1,4 +1,10 @@
-
+.containerM {
+    display: flex;
+   
+  }
+  .contenedor{
+    width: 100%;
+  }
 .container {
     background-color: white;
     width: 80%;
