--- a/Frontend/src/app/arrastrar/arrastrar.component.html
+++ b/Frontend/src/app/arrastrar/arrastrar.component.html
@@ -1,18 +1,34 @@
 
-    <div class="container">
-        <h1>Crear Nueva Solicitud de Trámite</h1>
-        <p>Ficha técnica INVIMA</p>
-        <div class="flex">
-            <div class="left">
-            </div>
-            <div class="upload-area" id="upload-area">
-                <p>Arrastra archivos a esta zona</p>
-                <input type="file" id="file-input" >
-                <label for="file-input">Seleccionar archivos</label>
-            </div>
-            <div class="right">
-                <button class="add-button">Agregar</button>
-            </div>
-        </div>
+    
+    <app-header></app-header>
+   
+
+    <div class="containerM">
+            
+        <app-lateral></app-lateral>
         
+        <div class="contenedor">
+                
+            <app-barra-opc></app-barra-opc>
+            <!--CORTA-->
+            <div class="container">
+                <h1>Crear Nueva Solicitud de Trámite</h1>
+                <p>Ficha técnica INVIMA</p>
+                <div class="flex">
+                    <div class="left">
+                    </div>
+                    <div class="upload-area" id="upload-area">
+                        <p>Arrastra archivos a esta zona</p>
+                        <input type="file" id="file-input" >
+                        <label for="file-input">Seleccionar archivos</label>
+                    </div>
+                    <div class="right">
+                        <button class="add-button">Agregar</button>
+                    </div>
+                </div>
+                
+            </div>
+        
+            <!--CORTA-->
+        </div>
     </div>
