--- a/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
+++ b/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
@@ -7,7 +7,7 @@
             </a>
             <div class="dropdown-content">
               
-                <div class="Cajaa"><a href="#">Crear</a></div>
+                <div class="Cajaa"><a [routerLink]="['/crearTramite']">Crear</a></div>
                 <div class="Cajaa"><a href="#">Modificar</a></div>
                 <div class="Cajaa"><a href="#">Renovar</a></div>
                 <div class="Cajaa"><a href="#">Solicitud PBE</a></div>
