--- a/Frontend/src/app/crear-tramite/crear-tramite.component.css
+++ b/Frontend/src/app/crear-tramite/crear-tramite.component.css
@@ -13,7 +13,9 @@
     background-color: #ffffff;
     border: 1px solid #ddd;
 }
-  
+a{
+  text-decoration: none;
+}
 .form-group {
   margin-bottom: 15px;
 }
