--- a/Frontend/src/app/Layout/lateral/lateral.component.html
+++ b/Frontend/src/app/Layout/lateral/lateral.component.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li class="nav-item"><a href=""><img src="images/Tramites.png" alt="Mis Trámites" class="icono"></a><p>Mis Tramites</p></li>
+        <li class="nav-item"><a [routerLink]="['/tramites']"><img src="images/Tramites.png" alt="Mis Trámites" class="icono"></a><p>Mis Tramites</p></li>
         <li class="nav-item"><a href=""><img src="images/Calendario.png" alt="Calendario" class="icono"></a><p>Calendario</p></li>
         <li class="nav-item"><a href=""><img src="images/Estadisticas.png" alt="Estadísticas" class="icono"></a><p>Estadisticas</p></li>
         <li class="nav-item"><a href=""><img src="images/Correo.png" alt="Correo" class="icono"></a><p>Correo</p></li>
