--- a/Frontend/src/app/crear-tramite/crear-tramite.component.html
+++ b/Frontend/src/app/crear-tramite/crear-tramite.component.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="fin">
-                <button type="submit">Enviar</button>
+                <button type="submit" ><a [routerLink]="['/arrastrar']">Enviar</a></button>
             </div>
           </div>
           <!--CORTA-->
