--- a/Frontend/src/app/arrastrar/arrastrar.component.html
+++ b/Frontend/src/app/arrastrar/arrastrar.component.html
@@ -23,7 +23,7 @@
                         <label for="file-input">Seleccionar archivos</label>
                     </div>
                     <div class="right">
-                        <button class="add-button">Agregar</button>
+                        <button type="submit" class="fl"><a [routerLink]="['/crearTramite']">Agregar</a></button>
                     </div>
                 </div>
                 
