--- a/Frontend/src/app/crear-tramite/crear-tramite.component.html
+++ b/Frontend/src/app/crear-tramite/crear-tramite.component.html
@@ -38,25 +38,31 @@
                         <li>
                         <label for="fichaTecnica">Ficha técnica INVIMA</label>
                         <div class="cuadro">
-                            <input type="file" id="fichaTecnica">
+                            <!--<input type="file" id="fichaTecnica">-->
+                            <button type="submit" class="fl"><a [routerLink]="['/arrastrar']">seleccionar archivo</a></button>
+                            <p>Ningun archivo seleccionado</p>
                         </div>
                         </li>
                         <li>
                         <label for="formatoInterno">Formato Interno de Solicitud</label>
                         <div class="cuadro">
-                            <input type="file" id="formatoInterno">
+                            <button type="submit" class="fl"><a [routerLink]="['/arrastrar']">seleccionar archivo</a></button>
+                            <p>Ningun archivo seleccionado</p>
                         </div>
                         </li>
                         <li>
                         <label for="certificadoAnalisis">Certificado de Análisis</label>
                         <div class="cuadro">
-                            <input type="file" id="certificadoAnalisis">
+                            <button type="submit" class="fl"><a [routerLink]="['/arrastrar']">seleccionar archivo</a></button>
+                            <p>Ningun archivo seleccionado</p>
                         </div>
                         </li>
                         <li>
                         <label for="certificadoAditivos">Certificado de Aditivos</label>
                         <div class="cuadro">
-                            <input type="file" id="certificadoAditivos">
+                            
+                            <button type="submit" class="fl"><a [routerLink]="['/arrastrar']">seleccionar archivo</a></button>
+                            <p>Ningun archivo seleccionado</p>
                         </div>
                         </li>
                     </ul>
