--- a/Frontend/src/app/crear-tramite/crear-tramite.component.css
+++ b/Frontend/src/app/crear-tramite/crear-tramite.component.css
@@ -64,7 +64,7 @@ button {
 }
 .cuadro{
     padding: 7px;
-    
+    display: flex;
     margin: 15px;
     border:solid 1px #ccc;
     border-radius: 8px;
@@ -77,4 +77,14 @@ button {
     margin-top: 70px;
     margin-left: 25%;
     width: 60%;
+}
+.fl{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15px;
+}
+p{
+  font-size: 15px;
+  margin-left: 5px;
 }
