--- a/Frontend/src/app/Login/login/login.component.css
+++ b/Frontend/src/app/Login/login/login.component.css
@@ -11,6 +11,10 @@
     background-position: center;
     font-family: Arial, sans-serif;
 }
+a{
+    text-decoration: none;
+    color: white;
+}
 
 .login-container {
     display: flex;
