--- a/Frontend/src/app/Login/login/login.component.html
+++ b/Frontend/src/app/Login/login/login.component.html
@@ -10,7 +10,8 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" placeholder="Contraseña">
                 
-                <button type="submit">Ingresar</button>
+                
+                <button type="submit" class="fl"><a [routerLink]="['/tramites']">Ingresar</a></button>
 
 
                 <div class="toggle-options">
