--- a/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
+++ b/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
@@ -8,10 +8,11 @@
             <div class="dropdown-content">
               
                 <div class="Cajaa"><a [routerLink]="['/crearTramite']">Crear</a></div>
-                <div class="Cajaa"><a href="#">Modificar</a></div>
-                <div class="Cajaa"><a href="#">Renovar</a></div>
-                <div class="Cajaa"><a href="#">Solicitud PBE</a></div>
-                <div class="Cajaa"><a href="#">Auditoria</a></div>
+                <div class="Cajaa"><a [routerLink]="['/crearTramite']">Modificar</a></div>
+                <div class="Cajaa"><a [routerLink]="['/crearTramite']">Renovar</a></div>
+                <div class="Cajaa"><a [routerLink]="['/pbe']">Solicitud PBE</a></div>
+                <div class="Cajaa"><a [routerLink]="['/crearTramite']">Auditoria</a></div>
+                
                 
             </div>
           </div>
