--- a/Frontend/src/app/crear-tramite/crear-tramite.component.html
+++ b/Frontend/src/app/crear-tramite/crear-tramite.component.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="fin">
-                <button type="submit" ><a [routerLink]="['/arrastrar']">Enviar</a></button>
+                <button type="submit" ><a [routerLink]="['/confirmacion']">Enviar</a></button>
             </div>
           </div>
           <!--CORTA-->
