--- a/Frontend/src/app/spolicitud-pbe/spolicitud-pbe.component.css
+++ b/Frontend/src/app/spolicitud-pbe/spolicitud-pbe.component.css
@@ -5,6 +5,9 @@
 .main-content {
     display: flex;
 }
+.contenedor{
+    width: 100%;
+}
 
 .ContenedorPendientes {
     width: 1000px;
@@ -94,79 +97,15 @@ td p{
 }
 
 /*****/
-
-
-/*ESTADO DEL REGISTRO*/
-.InfoContenedor {
-    right:0;
-    height: 100hv;
-    width: 25%;
-    background-color: #BCC9E5;
-    padding: 20px;
-}
-
-.registro-info h2 {
-    font-size: 17px;
-    color: #000000;
-}
-.InfoContenedor p{
-    font-size: 14px;
-    color: #857c7c;
-}
-.InfoContenedor a{
-    font-size: 16px;
-}
-.progress-bar {
-    width: 100%;
-    background-color: #E7EBF5;
-    height: 15px;
-    border-radius: 10px;
-    margin: 10px 0;
-}
-
-
-
-
-
-.progress {
-    height: 100%;
-    background-color: red;
-    border-radius: 10px;
-}
-
-.progress-percent {
-    text-align: right;
-    font-size: 14px;
-    font-weight: bold;
-    color: red;
-}
-
-
-
-.nav-item p{
-    font-size: 13px;
-    text-align: center;
-}
-button{
-    background-color: transparent;
-    border: none;
-}
+a{
+    text-decoration: none;
+  }
 /**********************************************************************************************************/
-* {
-    box-sizing: border-box;
-}
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
 
 .container {
-    width: 60%;
+    width: 80%;
     margin: 30px auto;
-    padding: 20px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -184,8 +123,20 @@ h2 {
 
 form {
     padding: 20px;
+    
 }
-
+/**************************/
+.formContenedor{
+    display: flex;
+}
+.left{
+    width: 50%;
+    padding: 2%;
+}
+.right{
+    width: 50%;
+    padding: 2%;
+}
 fieldset {
     border: 1px solid #ddd;
     border-radius: 8px;
