--- a/Frontend/src/app/spolicitud-pbe/spolicitud-pbe.component.html
+++ b/Frontend/src/app/spolicitud-pbe/spolicitud-pbe.component.html
@@ -22,6 +22,8 @@
         <div class="container">
             <h2>Solicitud de PBE</h2>
             <form class="form-solicitud">
+                <div class="formContenedor">
+                <div class="left">
                 <fieldset class="datos-personales">
                     <legend>Datos Personales</legend>
                     <label for="nombre">Nombre completo</label>
@@ -54,7 +56,8 @@
                     <label for="cantidad">Cantidad</label>
                     <input type="range" id="cantidad" name="cantidad" min="1" max="100" value="1">
                 </fieldset>
-    
+            </div>
+            <div class="right">
                 <fieldset class="solicitud">
                     <legend>Solicitud</legend>
                     <label for="fecha">Fecha de solicitud</label>
@@ -74,10 +77,13 @@
                 </fieldset>
                 
                 <div class="botones">
-                    <button type="button" class="cancelar">Cancelar</button>
-                    <button type="submit" class="enviar">Enviar</button>
+                    <button type="button" class="cancelar"><a [routerLink]="['/confirmacion']">Cancelar</a></button>
+                    <button type="submit" class="enviar"><a [routerLink]="['/confirmacion']">Enviar</a></button>
                 </div>
-            </form>
+            </div>
+            
+            </div>
+        </form>
         </div>
 
 
