--- a/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
+++ b/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
@@ -25,7 +25,7 @@
 
     <div class="icons"> 
         <a href=""><img src="images/Ajustes.png" alt="Icon 3" class="icono"></a>
-        <a href=""><img src="images/Notificacion.png" alt="Icon 4" class="icono"></a>
-        <a href=""><img src="images/Usuario.png" alt="Icon 5" class="icono"></a>
+        <a [routerLink]="['/notificaciones']"><img src="images/Notificacion.png" alt="Icon 4" class="icono"></a>
+        <a [routerLink]="['/notificaciones']"><img src="images/Usuario.png" alt="Icon 5" class="icono"></a>
     </div>
 </div>
