--- a/Frontend/src/app/Layout/lateral/lateral.component.html
+++ b/Frontend/src/app/Layout/lateral/lateral.component.html
@@ -4,6 +4,6 @@
         <li class="nav-item"><a href=""><img src="images/Calendario.png" alt="Calendario" class="icono"></a><p>Calendario</p></li>
         <li class="nav-item"><a href=""><img src="images/Estadisticas.png" alt="Estadísticas" class="icono"></a><p>Estadisticas</p></li>
         <li class="nav-item"><a href=""><img src="images/Correo.png" alt="Correo" class="icono"></a><p>Correo</p></li>
-        <li class="nav-item"><a href=""><img src="images/Historial.png" alt="Historial" class="icono"></a><p>Historial</p></li>
+        <li class="nav-item"><a [routerLink]="['/historial']"><img src="images/Historial.png" alt="Historial" class="icono"></a><p>Historial</p></li>
     </ul>
 </nav>
