--- a/Frontend/src/app/calendario/calendario.component.css
+++ b/Frontend/src/app/calendario/calendario.component.css
@@ -1,4 +1,42 @@
 
+.day-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.day-cell span {
+  font-size: 1.2em;
+}
+
+.month-selector {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.month-selector button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.month-selector span {
+  margin: 0 20px;
+  font-size: 1.5em;
+}
+
+.calendar-container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+
+
+
 
 .container {
   display: flex;
@@ -74,6 +112,8 @@ tbody td {
   text-align: center;
   border-radius: 8px;
 }
+
+
 
 /* Media Queries para dispositivos móviles */
 @media (max-width: 768px) {
