Agregar pantalla auditoria

--- a/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
+++ b/Frontend/src/app/Layout/barra-opc/barra-opc.component.html
@@ -11,7 +11,7 @@
                 <div class="Cajaa"><a [routerLink]="['/modificarInternacional']">Modificar</a></div>
                 <div class="Cajaa"><a [routerLink]="['/renovar']">Renovar</a></div>
                 <div class="Cajaa"><a [routerLink]="['/pbe']">Solicitud PBE</a></div>
-                <div class="Cajaa"><a [routerLink]="['/crearTramite']">Auditoria</a></div>
+                <div class="Cajaa"><a [routerLink]="['/auditoria']">Auditoria</a></div>
                 
                 
             </div>
